--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3197,7 +3197,18 @@ select {
 
 .text-indigo-600 {
   --tw-text-opacity: 1;
-  color: rgba(79, 70, 229, var(--tw-text-opacity));
+  color: rgba(107, 70, 193, var(--tw-text-opacity));
+}
+
+.bg-brand-purple {
+  --tw-bg-opacity: 1;
+  background-color: rgba(107, 70, 193, var(--tw-bg-opacity));
+
+}
+
+.text-brand-purple {
+  --tw-text-opacity: 1;
+  color: rgba(102, 51, 153, var(--tw-text-opacity));
 }
 
 .text-lightBlue-400 {
